--- a/index.html
+++ b/index.html
@@ -12,7 +12,15 @@
     <form id="create-task-form" action="" method="POST">
       <label for="new-task-description">Task description:</label>
       <input type="text" id="new-task-description" name="new-task-description" placeholder="description">
+      <input type="date" id="new-task-due-date" name="new-task-due-date" placeholder="task-due-date">
+      <input type="number" id="new-task-duration" name="new-task-duration-description" placeholder="new-task-duration">
+      <select id="priority-selector">
+        <option id='high' value="High">High Priority</option>
+        <option id='med' value="Medium">Medium Priority</option>
+        <option id='low' value="Low">Low Priority</option>
+      </select>
       <input type="submit" value="Create New Task">
+      
     </form>
 
     <div id="list">
